k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elearn-web-svc
spec:
  selector:
    app: elearn-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
